--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://public.tableau.com/app/profile/l.wonder/vizzes" class="image portfolio"><img src="images/tb2.png" alt="" /></a>
+								<a href="https://public.tableau.com/app/profile/l.wonder/vizzes" class="image portfolio"><img src="images/tb2.PNG" alt="" /></a>
 								<h3><a href="https://public.tableau.com/app/profile/l.wonder/vizzes">Interactive Dashboards in Tableau</a></h3>
 								<p>Designed dynamic dashboards in Tableau to transform complex data into engaging visualizations. This provided stakeholders with actionable insights and supported effective storytelling for data-driven decisions.</p>
 							</article>
