--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 							</header>
 							<p> Welcome to my data analysis portfolio! As a passionate data analyst, I'm excited to share my work and experience with you.</p>
 
-								<p> With a foundation in software development, I bring technical expertise and analytical skills to uncover insights that fuel business growth.</p>
+								<p> With over 4 years of experience in fintech, I specialize in leveraging SQL, Python, Excel, and Power BI to optimize processes, automate workflows, and deliver data-backed solutions that drive business growth. </p>
 								
-								<p> I'm passionate about turning complex data into actionable solutions, I leverage programming and advanced analysis techniques to drive impactful results.</p>
+								<p> My background in software development allows me to implement advanced analytical techniques, troubleshoot inefficiencies, and bridge the gap between technical systems and operational needs. I thrive in collaborative environments, working across teams to enhance decision-making and deliver measurable impact.</p>
+							
+							<p>Beyond the numbers, I’m committed to continuous learning and innovation—always exploring new ways to extract value from data and turn it into strategic advantage. Let’s build smarter solutions together.</p>
 							<a href="#work" class="button large scrolly">View My Expertise</a>
 						</div>
 					</div>
