--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 							</header>
 							<p> Welcome to my data analysis portfolio! As a passionate data analyst, I'm excited to share my work and experience with you.</p>
 
-								<p> With over 4 years of experience in fintech, I specialize in leveraging SQL, Python, Excel, and Power BI to optimize processes, automate workflows, and deliver data-backed solutions that drive business growth. </p>
+								<p>With over 4 years of experience in fintech, I specialize in leveraging SQL, Python, Excel, and Power BI to optimize processes, automate workflows, and deliver data-backed solutions that drive business growth.</p>
 								
-								<p> My background in software development allows me to implement advanced analytical techniques, troubleshoot inefficiencies, and bridge the gap between technical systems and operational needs. I thrive in collaborative environments, working across teams to enhance decision-making and deliver measurable impact.</p>
-							
-							<p>Beyond the numbers, I’m committed to continuous learning and innovation—always exploring new ways to extract value from data and turn it into strategic advantage. Let’s build smarter solutions together.</p>
+								<p> My software development experience enables me to deploy advanced analytics, optimize systems, and align tech with business goals. I excel at cross-team collaboration, driving data-informed decisions that deliver impact.</p>
+								<p>Beyond the numbers, I'm committed to continuous learning and innovation; always exploring new ways to extract value from data and turn it into strategic advantage. Let’s build smarter solutions together.</p>
 							<a href="#work" class="button large scrolly">View My Expertise</a>
 						</div>
 					</div>
