--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
 							<header>
 								<h1>Hello. I'm <strong>Lucy Mwangi</strong></h1>
 							</header>
-							<p> Welcome to my data analysis portfolio! As a passionate data analyst, I'm excited to share my work and experience with you.</p>
-
-								<p>With over 4 years of experience in fintech, I specialize in leveraging SQL, Python, Excel, and Power BI to optimize processes, automate workflows, and deliver data-backed solutions that drive business growth.</p>
-								
-								<p> My software development experience enables me to deploy advanced analytics, optimize systems, and align tech with business goals. I excel at cross-team collaboration, driving data-informed decisions that deliver impact.</p>
+							<p> Welcome to my data playground! I'm a fintech-focused data analyst with 4+ years of experience transforming raw numbers into actionable growth strategies.</p>
+							<p> I specialize in SQL, Python, and Power BI to automate workflows, uncover insights, and drive measurable business impact through data storytelling. My software development experience enables me to deploy advanced analytics, optimize systems, and align tech with business goals.</p>
 								<p>Beyond the numbers, I'm committed to continuous learning and innovation; always exploring new ways to extract value from data and turn it into strategic advantage. Let’s build smarter solutions together.</p>
 							<a href="#work" class="button large scrolly">View My Expertise</a>
 						</div>
