--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 								<h1>Hello. I'm <strong>Lucy Mwangi</strong></h1>
 							</header>
 							<p> Welcome to my data playground! I'm a data analyst with 4+ years of experience transforming raw numbers into clear growth opportunities.</p>
-							<p> I specialize in SQL, Python, and Power BI to automate workflows, uncover insights, and drive measurable business impact through data storytelling. My software development experience enables me to deploy advanced analytics, optimize systems, and align tech with business goals.</p>
-								<p>Beyond the numbers, I'm committed to continuous learning and innovation; always exploring new ways to extract value from data and turn it into strategic advantage. Let’s build smarter solutions together.</p>
+							<p> I specialize in SQL, Python, Excel, and Power BI to automate workflows, uncover insights, and drive measurable business impact through data storytelling. My software development experience enables me to deploy advanced analytics, optimize systems, and align tech with business goals.</p>
+								<p>Beyond the numbers, I'm committed to continuous learning and innovation; always exploring new ways to extract value and turn it into strategic advantage. Let’s build smarter solutions together.</p>
 							<a href="#work" class="button large scrolly">View My Expertise</a>
 						</div>
 					</div>
